<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TFG_Project</string>
    <string name="inici_de_sessio">Inici de Sessió</string>
    <string name="email">Adreça electrònica</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="inicia_sessió">Inicia sessió</string>
    <string name="sense_compte">No tens un compte encara? Fes click AQUÍ per registrar-te!</string>
    <string name="Registre">Registre</string>
    <string name="Nom_d_usuari">Nom d"'"usuari</string>
    <string name="Confirma_Contrasenya">Confirma Contrasenya</string>
    <string name="Registrar_se">Registrar-se</string>
    <string name="compteExistent">Ja tens compte?</string>
    <string name="menu_principal">Menú Principal</string>
    <string name="crear_lliga_virtual">Crear Lliga Virtual</string>
    <string name="unir_lliga_virtual">Unir-se Lliga Virtual</string>
    <string name="meves_lligues">Les Meves Lligues</string>
    <string name="nom">Nom Lliga</string>
    <string name="participants">Participants</string>
    <string name="competicio">Competició</string>
    <string name="grup">Grup</string>
    <string name="plantilla">Plantilla</string>

    <string name="nomLligaVirtual">Nom Lliga Virtual</string>
    <string name="maxPartipants">Número Màxim Participants:  </string>
    <string name="competicio2">Competició: </string>
    <string name="grup2">Grup: </string>
    <string name="classificacio">CLASSIFICACIÓ</string>
    <string name="resultats">Resultats</string>

    <string name="semanal">Setmanal</string>
    <string name="global">Global</string>


    <string-array name="maxNumParticipants">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string-array name="competicions">
        <item>Primera Catalana</item>
        <item>Segona Catalana</item>
        <item>Tercera Catalana</item>
        <item>Quarta Catalana</item>
    </string-array>

    <string-array name="grupsQuartaCatalana">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>20</item>
        <item>21</item>
        <item>23</item>
        <item>24</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string-array name="grupsTerceraCatalana">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>

    <string-array name="grupsSegonaCatalana">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="grupsPrimeraCatalana">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <string-array name="alineacions">
        <item>4-3-3</item>
        <item>4-4-2</item>
        <item>4-5-1</item>
        <item>3-5-2</item>
        <item>3-4-3</item>
        <item>5-3-2</item>
        <item>5-4-1</item>
    </string-array>


    <!--AdminPage-->
    <string name="bolcant_nous_partits">Bolcant els partits nous</string>
    <string name="bolcant_nous_jugadors">Bolcant els jugadors dels partits nous</string>
    <string name="bolcant_puntuacions_jornades">Bolcant les puntuacions de les jornades</string>
    <string name="bolcant_puntuacions_plantilles">Bolcant les puntuacions de les plantilles</string>

    <!--LoginPage-->
    <string name="email_not_verified">Encara no s\'ha verificat l\'adreça electrònica</string>
    <string name="authentication_failed">L\'usuari i contrasenya especificats no corresponen a cap usuari de l\'aplicació</string>
    <string name="forgot_password">Contrasenya oblidada?</string>
    <string name="recuperar_password">Vols recuperar la teva contrasenya? <br/>S\'enviarà un mail al correu electrònic introduit.</string>
    <string name="mail_send">S\'ha enviat un correu electrònic a l\'adreça electrònica per tal de recuperar la contrasenya.</string>
    <string name="mail_incorrect">L\'adreça electrònica no té un format vlid.</string>
    <string name="not_have_account">No tens un compte encara? <br/>Fes click AQUÍ per registrar-te!</string>
    <string name="recuperar_password2">No recordes la teva contrasenya?<br/>Fes click AQUÍ per recuperar-la.</string>
    <string name="contrasenya_oblidada2">No recordes la teva contrasenya? <br/>Fes click AQUÍ!</string>

    <!--ResultatsPartitPage-->
    <string name="gols_marcats">Gols</string>
    <string name="minuts_jugats">Minuts jugats</string>
    <string name="gols_penal">Gols de penal</string>
    <string name="gols_propia">Gols en pròpia</string>
    <string name="gols_rebuts">Gols rebuts</string>
    <string name="targetes_grogues">Targetes grogues</string>
    <string name="targetes_vermelles">Targetes vermelles</string>

    <!--ResultatsPage-->
    <string name="no_jugat">NJ</string>
    <string name="descansa">Descansa</string>




</resources>