<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="100">

    <TextView
        android:id="@+id/tvNomLliga"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="40"

        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/nom"
        android:textAlignment="center"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvParticipants"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/participants"
        android:textAlignment="center"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvCompeticio"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:text="@string/competicio"
        android:textAlignment="center"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvGrup"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/grup"
        android:textAlignment="center"
        android:textColor="#000000" />
</LinearLayout>